syntax = "proto3";

message QueryWorkspaceRequest {
    oneof one_of_workspace_id { string workspace_id = 1; };
}
message WorkspaceId {
    oneof one_of_workspace_id { string workspace_id = 1; };
}
